# agent-coordinator

./: .gitignore  CHARTER.md  LICENSE  README.md  pyproject.toml
examples/: __init__.py  basic_example.py  customer_service.py  dnd_party.py  research_team.py
src/agent_coordinator/: __init__.py  agent.py  coordinator.py  events.py  message.py  message_bus.py  metrics.py  monitor.py  registry.py  task.py  task_queue.py  visualization.py
tests/: __init__.py  test_coordinator.py  test_messages.py  test_tasks.py
